refactor: 아이템 이력 조회 DTO 매핑 구조 개선